--- a/Download_geopotential_height_data_Example.ipynb
+++ b/Download_geopotential_height_data_Example.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "15ec399d-9a1c-4c88-849b-1a3fc0ab065f",
+   "metadata": {},
+   "source": [
+    "# ERA5 data bank compiled and maintained by the European Centre for Medium Range Weather Forecast (ECMWF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13fd206e-4615-46ce-91e7-3487c0deae97",
+   "metadata": {},
+   "source": [
+    "### Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e13f0794",
@@ -76,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be639a0a",
+   "id": "904e9dc5-f212-4eb3-8d67-faaa63e615a0",
    "metadata": {},
    "outputs": [],
    "source": []
